--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   "license": "ISC",
   "scripts": {
     "dev": "NODE_ENV=dev webpack-dev-server --config ./webpack/dev.config.js",
-    "prod": "NODE_ENV=production webpack --config ./webpack/prod.config.js"
+    "prod": "NODE_ENV=production webpack --config ./webpack/prod.config.js",
+    "test": "mocha --compilers js:babel-core/register --recursive ./test/helpers.js --require ./test/dom.js --recursive",
+    "tdd": "npm test -- --watch"
   },
   "dependencies": {
     "axios": "^0.16.2",
     "create-reducer-map": "^0.2.0",
+    "currency-formatter": "^1.3.0",
     "extract-text-webpack-plugin": "2.1.2",
     "html-webpack-plugin": "^2.30.1",
     "material-ui": "^1.0.0-beta.12",
@@ -37,12 +40,19 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
     "css-loader": "^0.28.7",
+    "enzyme": "^3.1.0",
     "file-loader": "^0.11.2",
     "image-webpack-loader": "^3.4.2",
+    "jsdom": "^11.3.0",
+    "mocha": "^4.0.0",
     "node-sass": "^4.5.3",
     "raw-loader": "^0.5.1",
+    "react-addons-test-utils": "^15.6.2",
     "sass-loader": "^6.0.6",
+    "sinon": "^4.0.1",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack-merge": "^4.1.0"
