--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "NODE_ENV=dev webpack-dev-server --config ./webpack/dev.config.js",
     "prod": "NODE_ENV=production webpack --config ./webpack/prod.config.js",
-    "test": "mocha --compilers js:babel-core/register --recursive ./test/helpers.js --require ./test/dom.js --recursive",
+    "test": "NODE_ENV=test NODE_PATH=./src mocha --require babel-core/register --require babel-polyfill ./test/helpers.js --require ./test/dom.js ./test/*.spec.js",
     "tdd": "npm test -- --watch"
   },
   "dependencies": {
@@ -44,6 +44,7 @@
     "chai": "^4.1.2",
     "css-loader": "^0.28.7",
     "enzyme": "^3.1.0",
+    "enzyme-adapter-react-15": "^1.0.1",
     "file-loader": "^0.11.2",
     "image-webpack-loader": "^3.4.2",
     "jsdom": "^11.3.0",
@@ -51,6 +52,8 @@
     "node-sass": "^4.5.3",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^15.6.2",
+    "redux-mock-store": "^1.3.0",
     "sass-loader": "^6.0.6",
     "sinon": "^4.0.1",
     "style-loader": "^0.18.2",
