--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "chai-things": "^0.2.0",
     "create-reducer-map": "^0.2.0",
     "currency-formatter": "^1.3.0",
     "extract-text-webpack-plugin": "2.1.2",
