--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "axios": "^0.16.2",
     "chai-things": "^0.2.0",
-    "create-reducer-map": "^0.2.0",
     "currency-formatter": "^1.3.0",
     "extract-text-webpack-plugin": "2.1.2",
     "html-webpack-plugin": "^2.30.1",
@@ -29,6 +28,7 @@
     "react-router-redux": "next",
     "react-svg-inline": "^2.0.0",
     "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
     "redux-form": "^7.0.4",
     "redux-saga": "^0.15.6",
     "webpack": "2.7.0",
